css/styles.css
html {
  height: 100%;
}
body {
  height: 100%;
  width: 100%;
  background: rgb(224,128,2);
background: radial-gradient(circle, rgba(224,128,2,0.8) 28%, rgba(87,52,7,1) 100%);
}

.calculator-body {
  /* positions the calculator in the middle of the page
  reference: https://css-tricks.com/quick-css-trick-how-to-center-an-object-exactly-in-the-center/ */
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

.calculator-btns {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  border-radius: 8px;
  background-color: black;
}

.calculator-display {
  height: 1.5em;
  font-family: 'Roboto', sans-serif;
  width: 100%;
  font-size: 3.6em;
  text-align: right;
  background-color: rgb(48, 59, 46);
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

button {
  font-size: 1.5em;
  font-family: 'Roboto', sans-serif;
  height: 2em;
  width: 2.4em;
  border: none;
  color: white;
}

.clear-buttons {
  background-color: rgb(68	78	66	);
}

.numb {
  background-color:rgb( 99	107	98);
}

.operator {
  background-color: rgb(255	154	0);
}

.zero {
  border-bottom-left-radius: 8px;
  grid-column: 1 / 3;
  width: 100%;
}

.equals {
  border-bottom-right-radius: 8px;
}

